--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Peter Roessingh
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: I am a biologist working at the University of Amsterdam, doing both bioinformatics as well as general programming for my lab.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
+  email: githubmail@roessingh.net
+  facebook: Never!
+  flickr: no
+  github: roessingh.github.io
+  instagram: no
+  linkedin: no
+  pinterest: no
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: no
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
