--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Peter Roessingh
 
 # Short bio or description (displayed in the header)
-description: I am a biologist working at the University of Amsterdam, doing both bioinformatics as well as general programming for my lab.
+description: I am a biologist working at the University of Amsterdam, doing both bioinformatics as well as general programming for my experiments.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
